add_executable(array DataStructures/array.cpp)
add_executable(hash_map DataStructures/hash_map.cpp)
add_executable(linked_list DataStructures/linked_list.cpp)
add_executable(queue DataStructures/queue.cpp)
add_executable(stack DataStructures/stack.cpp)

add_executable(insertion Sorting/insertion.cpp)
add_executable(selection Sorting/selection.cpp)

add_executable(unit_int MoreKnowledge/unit_int.cpp)